@@ -17,7 +17,6 @@ Allow smat option to apply to more than one level
 
 Not currently implemented:
 Multinomial proportions - need manual calculation/reshaping
-Constraints (IGLS) - RCON/FCON commands
 Allow user specified design matrix (IGLS) - SETD command
 Debugging option to extract internal model matrices (IGLS) - XSS/VMAT/ZMAT/YRES/YMAT/XMAT commands
 
