@@ -4,6 +4,7 @@ Mon Jun 9 2014
    * If debugmode is turned on MLwiN will pause before and after fitting the model
    * Added extra estimation option to allow extra binomial/poisson/negative binomial/multinomial variables in (R)IGLS
    * Added reset estimation option to control negative variances in (R)IGLS models
+   * Added constraints option for fixed and random part in (R)IGLS models
 
 Fri Jun 6 2014
 1. Bug fixing
